[b]Advanced Genie Editor[/b]
for Age of Empires, Rise of Rome, Age of Kings, The Conquerors (including HD), Star Wars Galactic Battlegrounds and Clone Campaigns.

This is a program for editing data of genie (.DAT and .DLL) files. It can edit units, civilizations, graphics, researches, technologies, technology trees, terrains, terrain restrictions, sounds, player colors and some other things.

[url=http://aok.heavengames.com/cgi-bin/forums/display.cgi?action=st&fn=9&tn=44059&st=recent&f=9,44059,0,365]Advanced Genie Editor Forum Topic[/url]

[color=blue]Check out [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=11349]this[/url] program also. It's for graphical modding.

For editing language files in The Conquerors, I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].[/color]

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2015.12.27[/b]:
-Unit size shapes can be viewed in the SLP view.

Version [b]2015.12.17[/b]:
-Improved SLP view when stack option is unchecked.
-Fixed black shadows on saved SLPs.

Version [b]2015.12.11[/b]:
-Added copy sounds from civ to civ button to sounds tab.
-Added an option to merge shadow from another SLP.

Version [b]2015.12.2[/b]:
-Terrain restriction tab updated.

Version [b]2015.11.26[/b]:
-Renamed enable/disable buttons.
-Added a button to enable automatic backups.
-Added new handy buttons to sounds tab.

Version [b]2015.11.24[/b]:
-New/better information here and there.

Version [b]2015.11.18[/b]:
-Terrain restriction names customizable.
-Updates for Age of Empires 1.

Version [b]2015.11.16[/b]:
-Added an option to load one extra first priority DRS file.
-Updated techs tab for team effects.
-All unit filters combined.

Version [b]2015.11.5[/b]:
-Updates for The African Kingdoms.
-Only last language file gets saved if only it was edited.

Version [b]2015.10.16[/b]: